--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p class="header__text">
             <!-- You should create your content here -->
             <!-- Try writing down "Lorem30" and press Enter 😉 -->
+            Lorem30
         </p>
     </header>
 </body>
